testsuite/tests/properties/invalid_lazy_field/inconsistent_base_2/test.lkt
from common import Number

class FooNode implements Node[FooNode] {
    @exported @lazy p: Int = 2
}

class Example: FooNode {
    @exported fun p(): Int = 2
}
